--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -12,7 +12,7 @@ body {
   display: flex;
 }
 
-.all-cards {
+.card-grid {
   display: grid;
   grid-template-columns: 20rem 20rem 20rem;
   margin-bottom: 50px;
